# niftyprefs

./: ChangeLog  Doxyfile  Doxyfile.in  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac  niftyprefs.pc.in  version  version.sh
debian/: README.Debian  README.source  changelog  changelog.in  control.tmpl.in  copyright  docbase.in  rules.tmpl.in  symbols
distros/ubuntu/: create-ubuntu-deb
distros/ubuntu/debian/: README.Debian  control  control.in  copyright
doc/: Doxyfile.in  Makefile.am
gentoo/dev-libs/niftyprefs/: metadata.xml  niftyprefs-9999.ebuild.in
include/: Makefile.am  nifty-array.h  nifty-primitives.h  niftyprefs-array.h  niftyprefs-class.h  niftyprefs-node-prop.h  niftyprefs-node.h  niftyprefs-obj.h  niftyprefs-updater.h  niftyprefs-version.h.in  niftyprefs.h
src/: Makefile.am  array.c  class.c  class.h  niftyprefs-array.c  niftyprefs-class.c  niftyprefs-obj.c  niftyprefs-version.c  niftyprefs.c  node-prop.c  node.c  obj.c  obj.h  prefs.c  prefs.h  updater.c  updater.h  version.c  version.c.in
tests/: 00_api.c  01_obj-to-prefs.c  02_prefs-to-obj.c  Makefile.am  api.c  array.c  obj-to-prefs.c  prefs-to-obj.c  update.c
