# libniftyprefs Makefile.am - v0.2 - Daniel Hiepler <daniel@niftylight.de>

SUBDIRS =

# name of directory to create inside /usr/include/ 
library_includedir = $(includedir)/lib$(PACKAGE_TARNAME)-$(PACKAGE_MAJOR_VERSION)

# headers to install 
library_include_HEADERS = \
	niftyprefs.h \
	niftyprefs-obj.h \
	niftyprefs-class.h \
	niftyprefs-node.h \
	niftyprefs-array.h \
	niftyprefs-version.h

